# HoneyPy

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
config/: __init__.py  default_config.json  development_config.json  production_config.json
data/: init.py
docs/: INSTALL.md
install/: install.sh  requirements.txt  setup.py
install/systemd/: honeypy.service  honeypy@.service
scripts/: backup_logs.sh  export_to_siem.py  import_ips.py  rotate_reports.sh
src/: __init__.py  honeypy.py
src/core/: __init__.py  honeypy_system.py  parser.py  reporter.py  tracker.py
src/logs/: __init__.py  attack_logger.py  formatters.py
src/utils/: geoip.py  helpers.py  validators.py
tests/: test_integration.py  test_parser.py  test_reporter.py  test_tracker.py
tests/fixtures/: test_ips.json
